# M3uVideoPlayerPc

./: .gitignore  CMakeLists.txt  README.md  Release_Build_setup.md  Resume-point.txt  Settings_promt.txt  app_icon.rc  error.txt  export_for_ai.bat  implementation_plan.md  installer.iss  promt.txt  test.md
src/: app_icon.rc  main.cpp
src/assets/: demo_data.json
src/data/: ChannelRepository.cpp  ChannelRepository.h  ContentTypeDetector.cpp  ContentTypeDetector.h  DatabaseManager.cpp  DatabaseManager.h  M3uParser.cpp  M3uParser.h  PlaylistRepository.cpp  PlaylistRepository.h  ResumeRepository.cpp  ResumeRepository.h  XtreamApiClient.cpp  XtreamApiClient.h
src/domain/: Channel.h  Enums.h  FuzzySearch.cpp  FuzzySearch.h  Group.h  IChannelRepository.h  IPlaylistRepository.h  PlaybackHistory.h  Playlist.h
src/infrastructure/: PosterFetchService.cpp  PosterFetchService.h  SettingsManager.cpp  SettingsManager.h  TimeZoneManager.cpp  TimeZoneManager.h  TrustedTimeSource.cpp  TrustedTimeSource.h
src/infrastructure/player/: MpvVideoItem.cpp  MpvVideoItem.h
src/ui/: AppController.cpp  AppController.h  ChannelViewModel.cpp  ChannelViewModel.h  GroupViewModel.cpp  GroupViewModel.h  PlayerWindow.qml  PlaylistViewModel.cpp  PlaylistViewModel.h  ViewModeState.qml  main.qml
src/ui/components/: AddPlaylistDialog.qml  ChannelLogo.qml  EditPlaylistDialog.qml  FolderIcon.qml  ResumeDialog.qml  ResumeFab.qml  Sidebar.qml  SidebarButton.qml  SortMenuButton.qml  TimeZoneDialog.qml  ViewModeToggle.qml
src/ui/screens/: ChannelListView.qml  DirectLinkView.qml  GroupListView.qml  PlayerView.qml  PlaylistListView.qml  SettingsPlaylistsView.qml  SettingsView.qml
